fixed some css alignment and added links

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,19 +3,7 @@
 }
 
 body{
-  background-image: url(/images/mountain.jpg);
-}
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-image: url(/images/bgIMG.png);
 }
 
 .App-link {
