--- a/client/src/components/content/style.css
+++ b/client/src/components/content/style.css
@@ -2,13 +2,27 @@ body{
     color: white;
 }
 
+
+.content{
+    width: 60vw;
+    margin: auto;
+}
+
+.links{
+    background-position: center;
+}
+
 img {
     height: 200px;
     width: 185px;
     padding: 15px;
-    
 }
 
+
+
+.links{
+    padding: 3%;
+}
 
 .images{ 
    width: 100%;
@@ -18,16 +32,17 @@ img {
     bottom:0;
     right:0;
     align-content: center;
-    opacity: 50%;
+    opacity: 70%;
 }
 
 .h3{
     font-family: "Times New Roman", Times, serif;
-    color: wheat;
+    color:white;
 
 }
 
 .h4{
     font-family: "Times New Roman", Times, serif;
-    color: wheat;
+    color: white;
 }
+
