--- a/client/src/components/section/style.css
+++ b/client/src/components/section/style.css
@@ -1,5 +1,12 @@
-.h2{
-    color: wheat;
+.h1{
     font-family: 'Times New Roman', Times, serif;
-    padding: 5%;
+    color: white;
+    padding: 3%;
+}
+
+.section{
+    width: 75vw;
+   margin: auto;
+   opacity: 50%;
+   padding: 3%;
 }
